--- a/.github/workflows/createdockerimage.yml
+++ b/.github/workflows/createdockerimage.yml
@@ -6,7 +6,7 @@ on:
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  IMAGE_NAME: "your-dockerhub-username/your-docker-image-name"
+  IMAGE_NAME: "luckylaksh8/sfrobottest"
 
 jobs:
   build-and-push:
