--- a/.github/workflows/runrobottestindocker.yml
+++ b/.github/workflows/runrobottestindocker.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_NAME: sfrobottest
+  IMAGE_NAME: luckylaksh8/sfrobottest
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
