--- a/.github/workflows/createdockerimage.yml
+++ b/.github/workflows/createdockerimage.yml
@@ -6,7 +6,7 @@ on:
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  IMAGE_NAME: "luckylaksh8/sfrobottest"
+  IMAGE_NAME: sfrobottest
 
 jobs:
   build-and-push:
@@ -27,4 +27,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
