--- a/.github/workflows/createdockerimage.yml
+++ b/.github/workflows/createdockerimage.yml
@@ -6,6 +6,7 @@ on:
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  RUN_NUMBER: ${{ github.run_number }}
   IMAGE_NAME: sfrobottest
 
 jobs:
@@ -27,4 +28,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:v1.${{ github.run_number }}
