--- a/.github/workflows/createdockerimage.yml
+++ b/.github/workflows/createdockerimage.yml
@@ -28,4 +28,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.IMAGE_NAME }}:v1.${{ github.run_number }}
+        tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:v1.${{ github.run_number }}
